lesson3-hw/lesson3-hw/advanced_k8s/flask-be-server/k8s/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  namespace: my-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: itaef/flask-app:1.0.0.F
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: flask
  namespace: my-project
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: flask
