lesson3-hw/lesson3-hw/advanced_k8s/flask-be-server/k8s/pg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: my-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13
        volumeMounts:
        - mountPath: /docker-entrypoint-initdb.d
          name: init-script
        - mountPath: /var/lib/postgresql/data
          name: postgres-storage
      volumes:
      - name: init-script
        configMap:
          name: postgres-config
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: my-project
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
