lesson3-hw/lesson3-hw/advanced_k8s/flask-be-server/k8s/react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react
  namespace: my-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
      - name: react
        image: itaef/my-first-react-app:1.0.0.D
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: react
  namespace: my-project
spec:
  ports:
    - port: 80
  type: NodePort
  selector:
    app: react
