lesson3-hw/lesson3-hw/advanced_k8s/flask-be-server/k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: my-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: my-project
spec:
  ports:
    - port: 6379
  selector:
    app: redis
