lesson3-hw/lesson3-hw/advanced_k8s/flask-be-server/k8s/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-flask-redis
  namespace: my-project
spec:
  podSelector:
    matchLabels:
      app: flask
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: redis
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-react-flask
  namespace: my-project
spec:
  podSelector:
    matchLabels:
      app: react
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: flask
